# Flex-SDK

./: .gitignore  CHANGELOG.md  README.md  flex-crossfile.ini  install_script.sh  meson.build  meson_options.txt
.devcontainer/: Containerfile  devcontainer.json
examples/: meson.build
examples/analog/: README.md  main.c
examples/blinky/: README.md  main.c  meson.build
examples/digital/: README.md  main.c
examples/event/: README.md  main.c
examples/gnss/: README.md  main.c
examples/message/: README.md  main.c
examples/modbus/: README.md  main.c
examples/pulse_counter/: README.md  main.c
examples/rs485_rs232/: README.md  main.c
lib/: meson.build
lib/modbus/: README.md  meson.build
lib/modbus/include/myriota/: modbus.h
lib/modbus/src/: modbus.c
scripts/: buildkey.py  download_binaries.py  install_arm_toolchain.sh  meson.build  network_info.py  post_process_elf.py.in  updater.py
src/: main.c
subprojects/libflex/: meson.build  meson_options.txt
subprojects/libflex/config/: flex_options.c.in
subprojects/libflex/include/: flex.h  flex_errors.h
